tests/snapshots/test_runner__tests__compiler__typecheck__generic_function_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let identity = <A>(a: A): A => a

{
  let x = "hello".identity()
  let y: Integer = x
}

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/generic_function_2.kk:5:20
  │
5 │   let y: Integer = x
  │                    ^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Integer     | + String    |
    +---------------+-------------+
